tests/test_proof/bad/output/money-overlap.catala_en.Proof
[RESULT] [A.y] This variable never returns an empty error
[ERROR] [A.y] At least two exceptions overlap for this variable:
 --> tests/test_proof/bad/money-overlap.catala_en
  | 
8 |   context y content boolean
  |           ^
  + Test
The solver generated the following counterexample to explain the faulty behavior:
--> x : 1000.00 $
[RESULT] [A.x] This variable never returns an empty error
[RESULT] [A.x] No two exceptions to ever overlap for this variable
